# manip_ws

src/: cmd
src/rb210_ctrl_interface/: CMakeLists.txt  package.xml
src/rb210_description/: package.xml  setup.cfg  setup.py
src/rb210_description/collision/: arm_base_link.STL  finger1.STL  hand.STL  link1.STL  link3.STL  link4.STL  link6.STL
src/rb210_description/launch/: view_robot_launch.py
src/rb210_description/meshes/: arm_base_link.dae  finger2.STL  link1.dae  link2.STL  link2.dae  link3.dae  link4.dae  link5.STL  link5.dae  link6.dae
src/rb210_description/urdf/: rb210.urdf.xacro  test.urdf.xacro
src/rb210_description/worlds/: my_empty_world.world
src/rb210_driver/: CMakeLists.txt  package.xml
src/rb210_driver/config/: joints_config_for_test.yaml
src/rb210_driver/include/rb210_driver/: GRC01.h  rb210_driver.hpp
src/rb210_driver/launch/: test_driver.launch.py
src/rb210_driver/src/: rb210_driver.cpp  test_driver_node.cpp
src/rb210_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
src/rb210_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  planning_scene.scene  rb210.ros2_control.xacro  rb210.srdf  rb210.urdf.xacro  ros2_controllers.yaml
src/rb210_moveit_config/launch/: 01-start_gazebo.launch.py  02-moveit_rviz.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/rb210_path_planning/: CMakeLists.txt  package.xml  setup.py
src/rb210_path_planning/config/: ompl_planning.yaml
src/rb210_path_planning/include/rb210_path_planning/: path_interpolator.hpp  path_planner.hpp
src/rb210_path_planning/launch/: test_collision.launch.py  test_control.launch.py  test_planning.launch.py
src/rb210_path_planning/src/: path_planner.cpp  path_planning_client.cpp  path_planning_server.cpp  sim_visual_detection_node.cpp
src/rb210_planning_interfaces/: CMakeLists.txt  package.xml
src/rb210_planning_interfaces/action/: MoveTarget.action  PickPlace.action
src/rb210_planning_interfaces/srv/: PoseReq.srv  Trigger.srv
